<resources>
    <string name="app_name">FootballApp</string>
    <string name="leagues">Leagues</string>
    <string name="all_matches">Matches</string>
    <string name="place">#</string>
    <string name="standing">Table</string>
    <string name="team">TEAM</string>
    <string name="played">P</string>
    <string name="won">W</string>
    <string name="drawn">D</string>
    <string name="lost">L</string>
    <string name="goals_difference">GD</string>
    <string name="points">PTS</string>
    <string name="image_league" translatable="false">League image</string>
    <string name="image_team" translatable="false">Team image</string>
    <string name="image_sad" translatable="false">Sad image</string>
    <string name="unknown_error">Unknown error</string>
    <string name="connection_error">Internet connection error</string>
    <string name="text_matches">No information about matches</string>
    <string name="text_leagues">No information about leagues</string>
    <string name="text_league_table">No information about table</string>
    <string name="update">Information will be added later</string>
</resources>