<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLeagueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Premier League" />

    <ImageView
        android:id="@+id/ivLeagueEmblem"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/image_league"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLeagueTitle" />

    <ImageView
        android:id="@+id/ivSad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/image_sad"
        android:src="@drawable/ic_sad_smile"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_league_table"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSad" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLeagueEmblem">


        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/place"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="start"
            android:text="@string/team"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvPlayed"
            app:layout_constraintStart_toEndOf="@+id/tvPosition"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlayed"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/played"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvWon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWon"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/won"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvDrawn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDrawn"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/drawn"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvLost"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLost"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/lost"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvGoalsDifference"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGoalsDifference"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/goals_difference"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvPoints"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/points"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingBottom="240dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPosition" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:minWidth="30dp"
        android:minHeight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>